Do not allow adding duplicates in bookmarks

This currently only catches bookmarks in top-level (ie not sub-folders)

Original code by Tomaz Canabrava <tcanabrava@kde.org>

BUG: 408939
FIXED-IN: 19.12

https://invent.kde.org/kde/konsole/merge_requests/8